most of the site is finished, just some work with  the footer left

--- a/code/index.html
+++ b/code/index.html
@@ -3,12 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>Pattern News</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" type="image/png" href="images/logo/favicon-2.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- google fonts -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+
 </head>
 
 <body>
+
+
 
 
   <!-- SECTION 1 - logo & navbar -->
@@ -17,13 +29,13 @@
 
       <nav>
         <a class="logo-container" href="#">
-          <img class="logo" src="logo.svg">
+          <img class="logo" src="images/logo/logo-4.png">
         </a>
-        <h1 class="site-name-top">SITE NAME</h1>
-        <a class="nav-bar" href="#">one</a>
-        <a class="nav-bar" href="#">two</a>
-        <a class="nav-bar" href="#">three</a>
-        <a class="nav-bar" href="#">four</a>
+        <h1 class="site-name-top">pattern news</h1>
+        <a class="nav-bar" href="#">trends</a>
+        <a class="nav-bar" href="#">print</a>
+        <a class="nav-bar" href="#">designs</a>
+        <a class="nav-bar" href="#">collections</a>
       </nav>
 
     </section>
@@ -33,14 +45,14 @@
   <!-- SECTION 2 - the big news content -->
   <section id="section-2" class="section-2">
 
-    <figure class="img-container"><img src="logo.svg"></figure>
+    <figure class="img-container"><img src="images/news-images/news-39.jpg"></figure>
     <div class="big-news">
       <a class="news" href="#">
-        <h2>hejsan svejsan vad heter du</h2>
-        <p>This is a website that celebrates the world of surface pattern design. Lorem ipsum dolor sit amet,
-          consectetur
-          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua.</p>
+        <h2>Trend: Botanical colonies</h2>
+        <p>With prints of everything from mushrooms, plants and verdant green leaves to picturesque palm trees and
+          exotic flowers, the botanical patterns provide you with endless opportunities for creating that tropical
+          garden vibe. In the botanical prints category you will find both patterns with a vintage atmosphere, patterns
+          with a vivid floral expression as well as patterns with a modern graphic design.</p>
         <p class="read-more">[Read more] &rarr;</p>
       </a>
     </div>
@@ -54,89 +66,141 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-01.jpg">
+          <h3 class="text-on-pic">cool stuff</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">Paint</span> - more is more.</p>
     </div>
 
     <!-- CARD - 2 -->
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-49.jpg">
+          <h3 class="text-on-pic">the desert</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">Lost</span> in sandstorm.</p>
     </div>
 
     <!-- CARD - 3 -->
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-33.jpg">
+          <h3 class="text-on-pic">neon lights</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">Awake</span> at nights.</p>
     </div>
 
     <!-- CARD - 4 -->
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-23.jpg">
+          <h3 class="text-on-pic">tulips</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">From</span> a new perspective.</p>
     </div>
 
     <!-- CARD - 5 -->
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-47.jpg">
+          <h3 class="text-on-pic">osaka</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">Greetings</span> from Japan.</p>
     </div>
 
     <!-- CARD - 6 -->
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-27.jpg">
+          <h3 class="text-on-pic">abstract</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">Walls</span> in Dubai.</p>
     </div>
 
     <!-- CARD - 7 -->
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="logo.svg">
-          <h3 class="text-on-pic">hej</h3>
+          <img class="img-card" src="images/news-images/news-14.jpg">
+          <h3 class="text-on-pic">brutalism</h3>
         </a>
       </div>
-      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+      <p class="card-text"><span class="card-text-highlight">Inspired</span> by architecture.</p>
     </div>
 
   </section>
 
-  <!-- SECTION 4 – back to top -->
+  <!-- SECTION 4 – footer -->
   <footer>
     <section id="section-4" class="section-4">
 
+      <div>
+
+        <!-- INSTAGRAM -->
+        <svg class="social-media" width="48" height="48" viewBox="0 0 48 48" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M24 0C10.7452 0 0 10.7452 0 24C0 37.2548 10.7452 48 24 48C37.2548 48 48 37.2548 48 24C48 10.7452 37.2548 0 24 0ZM18.7233 11.2773C20.0886 11.2152 20.5249 11.2 24.0012 11.2H23.9972C27.4746 11.2 27.9092 11.2152 29.2746 11.2773C30.6373 11.3397 31.5679 11.5555 32.384 11.872C33.2266 12.1987 33.9386 12.636 34.6506 13.348C35.3627 14.0595 35.8 14.7736 36.128 15.6155C36.4427 16.4294 36.6587 17.3595 36.7227 18.7222C36.784 20.0876 36.8 20.5238 36.8 24.0001C36.8 27.4764 36.784 27.9116 36.7227 29.277C36.6587 30.6391 36.4427 31.5695 36.128 32.3837C35.8 33.2253 35.3627 33.9394 34.6506 34.6509C33.9394 35.3629 33.2264 35.8013 32.3848 36.1283C31.5703 36.4448 30.6391 36.6605 29.2765 36.7229C27.9111 36.7851 27.4762 36.8003 23.9996 36.8003C20.5236 36.8003 20.0876 36.7851 18.7222 36.7229C17.3598 36.6605 16.4294 36.4448 15.615 36.1283C14.7736 35.8013 14.0595 35.3629 13.3483 34.6509C12.6365 33.9394 12.1992 33.2253 11.872 32.3834C11.5557 31.5695 11.34 30.6394 11.2773 29.2767C11.2155 27.9114 11.2 27.4764 11.2 24.0001C11.2 20.5238 11.216 20.0873 11.2771 18.7219C11.3384 17.3598 11.5544 16.4294 11.8717 15.6152C12.1997 14.7736 12.6371 14.0595 13.3491 13.348C14.0606 12.6363 14.7747 12.1989 15.6166 11.872C16.4305 11.5555 17.3606 11.3397 18.7233 11.2773Z"
+            fill="black" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M22.853 13.5067C23.0759 13.5064 23.3158 13.5065 23.5746 13.5066L24.0013 13.5067C27.4189 13.5067 27.824 13.519 29.1736 13.5803C30.4216 13.6374 31.0989 13.8459 31.5501 14.0211C32.1475 14.2531 32.5733 14.5305 33.0211 14.9785C33.4691 15.4265 33.7464 15.8532 33.979 16.4505C34.1542 16.9012 34.363 17.5785 34.4198 18.8265C34.4811 20.1759 34.4944 20.5812 34.4944 23.9972C34.4944 27.4133 34.4811 27.8186 34.4198 29.168C34.3627 30.416 34.1542 31.0933 33.979 31.544C33.747 32.1413 33.4691 32.5667 33.0211 33.0144C32.5731 33.4624 32.1477 33.7398 31.5501 33.9718C31.0995 34.1478 30.4216 34.3558 29.1736 34.4128C27.8242 34.4742 27.4189 34.4875 24.0013 34.4875C20.5834 34.4875 20.1783 34.4742 18.8289 34.4128C17.5809 34.3552 16.9036 34.1467 16.4521 33.9715C15.8548 33.7395 15.4281 33.4621 14.9801 33.0141C14.5321 32.5661 14.2548 32.1405 14.0222 31.5429C13.847 31.0923 13.6382 30.4149 13.5814 29.1669C13.5201 27.8176 13.5078 27.4122 13.5078 23.994C13.5078 20.5759 13.5201 20.1727 13.5814 18.8233C13.6385 17.5753 13.847 16.898 14.0222 16.4468C14.2542 15.8494 14.5321 15.4228 14.9801 14.9748C15.4281 14.5268 15.8548 14.2494 16.4521 14.0169C16.9033 13.8409 17.5809 13.6329 18.8289 13.5755C20.0097 13.5222 20.4674 13.5062 22.853 13.5035V13.5067ZM30.8339 15.6321C29.9859 15.6321 29.2978 16.3193 29.2978 17.1676C29.2978 18.0156 29.9859 18.7036 30.8339 18.7036C31.6819 18.7036 32.3699 18.0156 32.3699 17.1676C32.3699 16.3196 31.6819 15.6316 30.8339 15.6316V15.6321ZM17.4279 24.0002C17.4279 20.3701 20.3709 17.4269 24.001 17.4268C27.6312 17.4268 30.5736 20.37 30.5736 24.0002C30.5736 27.6304 27.6314 30.5723 24.0013 30.5723C20.3711 30.5723 17.4279 27.6304 17.4279 24.0002Z"
+            fill="black" />
+          <path
+            d="M24.0012 19.7334C26.3575 19.7334 28.2679 21.6436 28.2679 24.0001C28.2679 26.3564 26.3575 28.2668 24.0012 28.2668C21.6447 28.2668 19.7345 26.3564 19.7345 24.0001C19.7345 21.6436 21.6447 19.7334 24.0012 19.7334Z"
+            fill="black" />
+        </svg>
+
+        <!-- PINTEREST -->
+        <svg class="social-media" width="20px" height="20px" viewBox="0 0 20 20" version="1.1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <!-- Generator: Sketch 3.8.1 (29687) - http://www.bohemiancoding.com/sketch -->
+          <title>pinterest [#180]</title>
+          <desc>Created with Sketch.</desc>
+          <defs></defs>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="Dribbble-Light-Preview" transform="translate(-220.000000, -7399.000000)" fill="#000000">
+              <g id="icons" transform="translate(56.000000, 160.000000)">
+                <path
+                  d="M173.876,7239 C168.399,7239 164,7243.43481 164,7248.95866 C164,7253.05869 166.407,7256.48916 169.893,7258.07936 C169.893,7256.21186 169.88,7256.45286 171.303,7250.38046 C170.521,7248.80236 171.129,7246.19673 172.88,7246.19673 C175.31,7246.19673 173.659,7249.79964 173.378,7251.2174 C173.129,7252.30544 173.959,7253.14238 174.955,7253.14238 C176.864,7253.14238 178.108,7250.71524 178.108,7247.87063 C178.108,7245.69456 176.615,7244.10437 174.042,7244.10437 C169.467,7244.10437 168.307,7249.19966 169.893,7250.79893 C170.292,7251.40294 169.893,7251.43118 169.893,7252.22174 C169.616,7253.05768 167.403,7251.84259 167.403,7248.70757 C167.403,7245.86195 169.727,7242.51518 174.457,7242.51518 C178.191,7242.51518 180.681,7245.27609 180.681,7248.2054 C180.681,7252.13805 178.523,7254.98366 175.37,7254.98366 C174.291,7254.98366 173.295,7254.3978 172.963,7253.72824 C172.36,7256.07371 172.238,7257.26258 171.303,7258.58153 C172.216,7258.83261 173.129,7259 174.125,7259 C179.602,7259 184,7254.56519 184,7249.04235 C183.752,7243.43481 179.353,7239 173.876,7239"
+                  id="pinterest-[#180]"></path>
+              </g>
+            </g>
+          </g>
+        </svg>
+
+        <!-- TWITTER -->
+        <svg class="social-media" width="48" height="48" viewBox="0 0 48 48" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M24 0C10.7452 0 0 10.7452 0 24C0 37.2548 10.7452 48 24 48C37.2548 48 48 37.2548 48 24C48 10.7452 37.2548 0 24 0ZM23.3316 20.338L23.2812 19.5075C23.1301 17.3551 24.4563 15.3891 26.5548 14.6265C27.327 14.3553 28.6364 14.3214 29.4926 14.5587C29.8283 14.6604 30.4663 14.9993 30.9195 15.3044L31.7421 15.8637L32.6486 15.5756C33.1523 15.423 33.8238 15.1688 34.1259 14.9993C34.4113 14.8468 34.6631 14.762 34.6631 14.8129C34.6631 15.101 34.042 16.084 33.5216 16.6263C32.8165 17.389 33.018 17.4568 34.4449 16.9483C35.3011 16.6602 35.3178 16.6602 35.15 16.9822C35.0492 17.1517 34.5288 17.7449 33.9748 18.2872C33.0347 19.2194 32.9844 19.3211 32.9844 20.1007C32.9844 21.304 32.4136 23.8123 31.8428 25.1851C30.7852 27.7612 28.5189 30.422 26.2526 31.7609C23.063 33.6422 18.8157 34.1167 15.24 33.0151C14.0481 32.6422 12 31.6931 12 31.5237C12 31.4728 12.6211 31.405 13.3766 31.3881C14.9546 31.3542 16.5326 30.9135 17.8756 30.1339L18.7822 29.5916L17.7413 29.2357C16.264 28.7272 14.9378 27.5578 14.6021 26.4562C14.5013 26.1003 14.5349 26.0833 15.475 26.0833L16.4487 26.0664L15.6261 25.6766C14.6524 25.1851 13.7627 24.3546 13.3262 23.5072C13.0072 22.8971 12.6044 21.3548 12.7219 21.2362C12.7554 21.1854 13.108 21.287 13.5109 21.4226C14.6692 21.8463 14.8203 21.7446 14.1488 21.0328C12.8897 19.7448 12.5036 17.8296 13.108 16.0162L13.3934 15.2027L14.5013 16.3043C16.7677 18.5245 19.4369 19.8465 22.4922 20.2363L23.3316 20.338Z"
+            fill="black" />
+        </svg>
+
+        <!-- FACEBOOK -->
+        <svg class="social-media" width="48" height="48" viewBox="0 0 48 48" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M24 0C10.7452 0 0 10.7452 0 24C0 37.2548 10.7452 48 24 48C37.2548 48 48 37.2548 48 24C48 10.7452 37.2548 0 24 0ZM26.5016 25.0542V38.1115H21.0991V25.0547H18.4V20.5551H21.0991V17.8536C21.0991 14.1828 22.6231 12 26.9532 12H30.5581V16.5001H28.3048C26.6192 16.5001 26.5077 17.1289 26.5077 18.3025L26.5016 20.5546H30.5836L30.1059 25.0542H26.5016Z"
+            fill="black" />
+        </svg>
+      </div>
+
+
       <div class="back-to-top">
         <a href="#section-1">
-          <img class="logo-bottom" src="logo.svg">
-          <h1 class="site-name-bottom">SITE NAME</h1>
+          <img class="logo-bottom" src="images/logo/logo.png">
+          <h1 class="site-name-bottom">pattern news</h1>
         </a>
       </div>
 
