--- a/code/index.html
+++ b/code/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
+    <title>Wedding Weekly</title>
     <link rel="stylesheet" media="all" href="./style.css" type="text/css"/>
-   
+    <link rel="icon" type="image/png" href="./Images/confetti.png">
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
     </header>
   
       <div class="main">
-        <img id="mainphoto" src="./Images/coronawedding.jpg">
+        <img id="mainphoto" src="./Images/coronawedding.jpg" alt="corona wedding">
         <div class="h2">
           <h2>How to plan a wedding during a world pandemic.</h2>
         <p>There’s a lot to think about when planning your big day—no matter where your wedding date falls on the calendar. But if it happens to be in the midst of the coronavirus crisis, you might be wondering what you should do—if anything—to prepare and plan for the potential that your wedding may be affected.
@@ -44,43 +44,43 @@
 <hr>
   <section class="cards">
     <div class="card">
-      <img src="./Images/venue.jpg">
+      <img src="./Images/venue.jpg" alt="venue">
         <h3>Find the perfect venue</h3>
         <a href="#">Read more...</a>
     </div>
 
     <div class="card">
-      <img src="./Images/flowers.jpg">
+      <img src="./Images/flowers.jpg" alt="flowers">
         <h3>Wedding flowers for under 100$</h3>
         <a href="#">Read more...</a>
     </div>
 
     <div class="card">
-      <img src="./Images/budget.png">
+      <img src="./Images/budget.png" alt="budget">
         <h3>It doesn't have to be expensive</h3>
         <a href="#">Read more...</a>
     </div>
 
     <div class="card">
-      <img src="./Images/dresses.jpg">
+      <img src="./Images/dresses.jpg" alt="dresses">
         <h3>Wedding dress silhouettes</h3>
         <a href="#">Read more...</a>
     </div>
 
     <div class="card">
-      <img src="./images/cake.png">
+      <img src="./images/cake.png" alt="cake">
         <h3>Ten inspirational wedding cakes</h3>
         <a href="#">Read more...</a>
     </div>
 
     <div class="card">
-      <img src="./images/guidelines.png">
+      <img src="./images/guidelines.png" alt="guidelines">
         <h3>Guest guidelines</h3>
         <a href="#">Read more...</a>
     </div>
 
     <div class="card">
-      <img src="./images/drink.jpg">
+      <img src="./images/drink.jpg" alt="drink">
         <h3>Open bar or not?</h3>
         <a href="#">Read more...</a>
     </div>
