Last minute touch ups, renamed the project.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
                 <nav class="navbar">
                         <div class="navbar-logo">
-                                <a href="#" class="logo-link">MN</a>
+                                <a href="#" class="logo-link">MZ</a>
                         </div>
                         <ul class="navbar-menu">
                                 <li class="navbar-menu-item">
@@ -36,7 +36,7 @@
         <main>
                <section class="intro-news">
                 <div class="intro-news-title">
-                        <h1 class="intro-news-main-title">Maker Net</h1>
+                        <h1 class="intro-news-main-title">Maker Zine</h1>
                         <h2 class="intro-news-main-subtitle" >In the making</h2>
                 </div>
                         <div class="intro-news-image">
@@ -72,7 +72,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Modern embroidery</h2>
                                         <p class="main-news-text">                                           
-                                                Så, där var han ändå! Prästen var ung, hög, smärt och 
+                                                Så, där var han ändå! Prästen var ung och 
                                                 strålande vacker. 
                                                 
                                         </p>
@@ -90,7 +90,7 @@
                                         <h2 class="main-news-title">Strings unite</h2>
                                         <p class="main-news-text">
                                                 Det skulle inte bli mässfall denna 
-                                                söndagen såsom den förra och många söndagar förut.
+                                                söndagen såsom den förra.
                                         </p>
                                 </div>
                         </article>
@@ -105,9 +105,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Controlling leather</h2>
                                         <p class="main-news-text">
-                                                Prästen hade en skalds djupa ögon och en fältherres fasta,
-                                                runda haka, allt hos honom var skönt, fint, uttrycksfullt,
-                                                genomglödgat av snille och andligt liv.
+                                                Prästen hade en skalds djupa ögon.
                                         </p>
                                 </div>
                         </article>
@@ -123,8 +121,7 @@
                                         <h2 class="main-news-title">Wood it</h2>
                                         <p class="main-news-text">
                                                 Folket i kyrkan kände sig underligt kuvat vid att se
-                                                honom sådan. Det var mera vant vid att han kom raglande
-                                                ut från krogen i sällskap med glada kamrater.
+                                                honom sådan. 
                                         </p>
                                 </div>
                         </article>
@@ -139,14 +136,14 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Glass on fire</h2>
                                         <p class="main-news-text">
-                                                Han hade supit så förfärligt, att han inte på flera veckor
+                                                Han hade supit så förfärligt, att han inte
                                                 hade kunnat sköta sin tjänst. 
                                         </p>
                                 </div>
                         </article>
 
                         <article class="main-news-item">
-                                <div class="main-news-image">
+                                <div class="main-news-image" data-content="link-overlay-textbox">
                                         <a href="#" class="card-link">
                                                 <img src="./img/swapnil-dwivedi-w46tRF64qNc-unsplash.jpg" 
                                                 alt="Hands making pottery" class="card-image">
@@ -155,8 +152,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Forming clay</h2>
                                         <p class="main-news-text">
-                                                Församlingen hade måst klaga på honom, först hos hans prost och 
-                                                sedan hos biskop och domkapitel.
+                                                Församlingen hade måst klaga på honom.
                                         </p>
                                 </div>
                         </article>
@@ -170,10 +166,8 @@
                                 </div>
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Knitting all around</h2>
-                                        <p class="main-news-textbox">
-                                                Nu var biskopen kommen till socknen för
-                                                att hålla visitation. Han satt i koret med guld-
-                                                korset på bröstet.
+                                        <p class="main-news-text">
+                                                Nu var biskopen kommen till socknen.
                                         </p>
                                 </div>
                         </article>
@@ -188,8 +182,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Life in fabric</h2>
                                         <p class="main-news-text">
-                                                Det var inte tvivel om att prästens uppförande hade gått
-                                                över det tillåtnas gräns.
+                                                Det var inte tvivel om att prästens uppförande hade gått över en gräns.
                                         </p>
                                 </div>
                         </article>
@@ -204,8 +197,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Carving rules</h2>
                                         <p class="main-news-text">
-                                                Då, på 1820-talet, var
-                                                man överseende i fråga om att dricka, men den här mannen
+                                                Den här mannen
                                                 hade försummat sitt ämbete för drycken skull. 
                                         </p>
                                 </div>
@@ -221,8 +213,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Color it!</h2>
                                         <p class="main-news-text">
-                                                Han stod i predikstolen och väntade, medan sista versen
-                                                av predikstolspsalmen sjöngs.
+                                                Han stod i predikstolen och väntade, medan sista versen sjöngs.
                                         </p>
                                 </div>
                         </article>
@@ -237,7 +228,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Embroidery is back!</h2>
                                         <p class="main-news-text">
-                                                Det kom en visshet över honom, medan han stod där, att
+                                                Det kom en visshet över honom, att
                                                 han hade idel fiender i kyrkan.
                                         </p>
                                 </div>
@@ -253,8 +244,7 @@
                                 <div class="main-news-textbox">
                                         <h2 class="main-news-title">Spoon it!</h2>
                                         <p class="main-news-text">
-                                                Bland herrskaperna på läktaren, bland bönderna nere i kyrkan,
-                                                bland nattvardsbarnen i koret hade han fiender, idel fiender.
+                                                Bland herrskaperna på läktaren, idel fiender.
                                         </p>
                                 </div>
                         </article>
@@ -270,7 +260,7 @@
                                         <h2 class="main-news-title">Fixin' it.</h2>
                                         <p class="main-news-text">
                                                 Prästen skulle ha velat störta ner på sina knän och be
-                                                dem om förbarmande. Men ögonblicket därpå kom en dov vrede över honom.
+                                                dem om förbarmande.
                                         </p>
                                 </div>
                         </article>
