--- a/code/index.html
+++ b/code/index.html
@@ -18,16 +18,16 @@
         </div>
         <nav>
           <ul>
-          <li class="nav-logo"><a href="https://www.fotbollskanalen.se/" target="_blank"><img src="/code/images/fk_logo.png" alt="Fotbollskanalen logo"></a></li>
-          <li class="nav-logo"><a href="https://www.goal.com/en" target="_blank"><img src="/code/images/goal-logo.jpg" alt="Goal logo"></a></li>
-          <li class="nav-logo"><a href="https://www.youtube.com/channel/UCbWUEnTRHb3bRdrnovq8iuA" target="_blank"><img src="/code/images/daily.jpg" alt="Football Daily logo"></a></li>
-          <li class="nav-logo"><a href="https://www.bbc.com/sport/football" target="_blank"><img src="/code/images/bbc-sport-logo.png" alt="BBC logo"></a></li>
+          <li class="nav-logo"><a href="https://www.fotbollskanalen.se/" target="_blank"><img src="/code/images/fk_logo.png" alt="Fotbollskanalen logo"/></a></li>
+          <li class="nav-logo"><a href="https://www.goal.com/en" target="_blank"><img src="/code/images/goal-logo.jpg" alt="Goal logo"/></a></li>
+          <li class="nav-logo"><a href="https://www.youtube.com/channel/UCbWUEnTRHb3bRdrnovq8iuA" target="_blank"><img src="/code/images/daily.jpg" alt="Football Daily logo"/></a></li>
+          <li class="nav-logo"><a href="https://www.bbc.com/sport/football" target="_blank"><img src="/code/images/bbc-sport-logo.png" alt="BBC logo"/></a></li>
           </ul>
       </nav>
     </header>
     <!--Big news section-->
     <section class="big-news-container">
-      <div class="news-card-image"><img src="/code/images/messi.jpg" alt="Lionel Messi"></div>
+      <div class="news-card-image"><img src="/code/images/messi.jpg" alt="Lionel Messi"/></div>
       <div class="news-card-text">
         <h2>The end of Messi in Barcelona?</h2>
       <p>Following FC Barcelonas huge 8-2 loss in the Champions League against Bayern Münich rumours are sparking about Lionel Messi wanting to leave the club. 
@@ -49,14 +49,14 @@
     </section>
     <!--Other news section-->
     <section class="other-news-container">
-      <div class="news-child"><img src="/code/images/koeman.jpg" alt="Ronald Koeman"><p>New Barcelona coach Ronald Koeman</p></div>
-      <div class="news-child"><img src="/code/images/cristiano.jpg" alt="Cristiano Ronaldo"><p>Messi's biggest rival Cristiano Ronaldo</p></div>
-      <div class="news-child"><img src="/code/images/family.jpg" alt="The Messi family"><p>Is the Messi family looking for a new home?</p></div>
-      <div class="news-child"><img src="/code/images/messi-city.jpg" alt="Messi in Man City?"><p>Could we be seeing Messi in Man City?</p></div>
-      <div class="news-child"><img src="/code/images/pepaguero.jpg" alt="Reason to move?"><p>This could be a reason to move to City</p></div>
-      <div class="news-child"><img src="/code/images/messiaguero.jpg" alt="Good friends"><p>Messi and Agüero are close friends</p></div>
-      <div class="news-child"><img src="/code/images/messi-dad.jpg" alt="Messi's father"><p>Messi's father and agent Jorge Messi</p></div>
-      <div class="news-child"><img src="/code/images/messiballon.jpg" alt="Ballon dór"><p>The one and only six time winner of Ballon dór</p></div>
+      <div class="news-child"><img src="/code/images/koeman.jpg" alt="Ronald Koeman"/><p>New Barcelona coach Ronald Koeman</p></div>
+      <div class="news-child"><img src="/code/images/cristiano.jpg" alt="Cristiano Ronaldo"/><p>Messi's biggest rival Cristiano Ronaldo</p></div>
+      <div class="news-child"><img src="/code/images/family.jpg" alt="The Messi family"/><p>Is the Messi family looking for a new home?</p></div>
+      <div class="news-child"><img src="/code/images/messi-city.jpg" alt="Messi in Man City?"/><p>Could we be seeing Messi in Man City?</p></div>
+      <div class="news-child"><img src="/code/images/pepaguero.jpg" alt="Reason to move?"/><p>This could be a reason to move to City</p></div>
+      <div class="news-child"><img src="/code/images/messiaguero.jpg" alt="Good friends"/><p>Messi and Agüero are close friends</p></div>
+      <div class="news-child"><img src="/code/images/messi-dad.jpg" alt="Messi's father"/><p>Messi's father and agent Jorge Messi</p></div>
+      <div class="news-child"><img src="/code/images/messiballon.jpg" alt="Ballon dór"/><p>The one and only six time winner of Ballon dór</p></div>
     </section>
     <!--Footer-->
     <footer>
