styling and images

--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
           <ul>
           <li class="nav-logo"><a href="https://www.fotbollskanalen.se/" target="_blank"><img src="./images/fk_logo.png" alt="Fotbollskanalen logo"/></a></li>
           <li class="nav-logo"><a href="https://www.goal.com/en" target="_blank"><img src="./images/goal-logo.jpg" alt="Goal logo"/></a></li>
-          <li class="nav-logo"><a href="https://www.youtube.com/channel/UCbWUEnTRHb3bRdrnovq8iuA" target="_blank"><img src="/code/images/daily.jpg" alt="Football Daily logo"/></a></li>
+          <li class="nav-logo"><a href="https://www.youtube.com/channel/UCbWUEnTRHb3bRdrnovq8iuA" target="_blank"><img src="./images/daily.jpg" alt="Football Daily logo"/></a></li>
           <li class="nav-logo"><a href="https://www.bbc.com/sport/football" target="_blank"><img src="./images/bbc-sport-logo.png" alt="BBC logo"/></a></li>
           </ul>
       </nav>
