--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
     <!--Header with logo and navbar-->
     <header>
       <div class="logo-name">
-        <img class="logo" src="/code/images/football.jpg" alt="logo">
+        <img class="logo" src="./images/football.jpg" alt="logo">
         <h1 class="website-name">Football News</h1>
         </div>
         <nav>
