--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <main>
                <section class="intro-news">
                 <div class="intro-news-title">
-                        <h1 class="intro-news-main-title">Maker Zine</h1>
+                        <h1 class="intro-news-main-title">Making Zine</h1>
                         <h2 class="intro-news-main-subtitle" >In the making</h2>
                 </div>
                         <div class="intro-news-image">
